# pw1-2020-2

./: .gitignore  README.md
aula01/: 03_operadores_relacionais.py  main.py
aula02/: 01.py
aula04/: 01.py  06.py  07.py  10.py  11.py  14.py
aula05/: 08.py  10.py  11.py  12.py  13.py  14.py
aula06/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py
aula06/15/: entrada.py  soma.py
aula07/: 01.py  02.py
aula07/03/: teste01.py  teste03.py
aula07/04/: nomes.py  teste.py
aula07/05/: nomes.py  teste.py
aula08/: manage.py
aula08/aula08_app/: apps.py  views.py
aula08/aula08_project/: asgi.py  settings.py  urls.py  wsgi.py
aula09/mb/: pyproject.toml
aula09/mb/md_project/: settings.py
aula09/mb/posts/: tests.py
aula09/pages/: pyproject.toml
aula10/blog/: models.py  urls.py
aula10/blog_project/: settings.py
aula10/templates/: base.html  post_detail.html
aula11/blog_custom/blog_project/: .~c9_invoke_SNiEgj.py  settings.py
aula11/blog_custom/users/: .~c9_invoke_lDtX3D.py
aula11/blog_default/blog_project/: settings.py
aula12/blog/: views.py
aula13/blog_project/: settings.py
aula13/templates/: post_detail.html  post_new.html
